채팅창 구현 (아직 한국말을 잘 못알아 들음)

--- a/index.html
+++ b/index.html
@@ -7,35 +7,98 @@
     <title>Document</title>
     <style>
       .content_box {
-        width: 600px;
-        height: 300px;
+        width: auto;
+        height: 500px;
         overflow-y: scroll;
+        padding: 10px;
       }
-      .line {
-        display: flex;
-      }
+      .line {display: flex;}
       .chat {
         background-color: rgb(249, 241, 199);
+        max-width: 600px; word-wrap: break-word;
+        padding: 10px;  
       }
-      .mine {
-        margin-left: auto;
+      .mine {margin-left: auto;}
+      .InputBox{
+        display: flex;
+        margin: 10px;
+        height: 30px;
+      }
+      #input{
+        width: 90%;
+      }
+      #send{
+        width:10%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
     <div class="content_box">
-      <p class="line"><span class="chat">안녕</span></p>
-      <p class="line"><span class="chat mine">안녕!</span></p>
+      <!-- <p class="line"><span class="chat">안녕</span></p>
+      <p class="line"><span class="chat mine">안녕!</span></p> -->
     </div>
-    <footer>
-      <input type="text" id="input" />
-      <button id="send">전송</button>
+    <footer class="InputBox">
+      <input class="InputTag" type="text" id="input" placeholder="채팅을 입력하세요"/>
+      <button class="InputTag" id="send">전송</button>
     </footer>
+    
   </body>
-  <script>
+  <script type="module">
+    import { Configuration, OpenAIApi } from 'https://cdn.skypack.dev/openai';
+    //엔터 리스너 달기
+    document.getElementById("input").addEventListener("keydown", function(event) {
+      if (event.keyCode === 13) {
+        event.preventDefault(); // 폼 제출 방지
+        myFunction();
+      }
+    });
+    //클릭 리스너 달기
     document.querySelector('#send').addEventListener('click',function(){
-      var template = `<p class="line"><span class="chat mine">안녕!</span></p>`;
-      document.querySelector('.content_box').insertAdjacentHTML('beforeend',template)
+      myFunction();
     })
+    function myFunction() {
+      //적은 내용 가져오기
+      var InputBox = document.querySelector('#input');
+      var myChatText = InputBox.value;
+      //만약 아무것도 안적었다면 동작하기 않기
+      if(myChatText == ``) return;
+      //내 채팅, 봇 채팅 엘리멘트 템플릿 두개 만들기
+      var template = {
+        mine : function(text){
+          return `<p class="line"><span class="chat mine">${text}</span></p>`;
+        },
+        bot: function(text){
+          return `<p class="line"><span class="chat">${text}</span></p>`;
+        }
+      };
+      //채팅창 가져오기
+      var ChatBox = document.querySelector('.content_box');
+      //채팅창에 내가 말한거 추가
+      ChatBox.insertAdjacentHTML('beforeend',template.mine(myChatText));
+      //입력창 초기화
+      InputBox.value = '';
+      //api로 답변듣기
+      const configuration = new Configuration({
+        apiKey: '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',
+      });
+      const openai = new OpenAIApi(configuration);
+
+      openai.createCompletion({
+        model: "text-davinci-003",
+        prompt: `${myChatText}`,
+        temperature: 0.7,
+        max_tokens: 256,
+        top_p: 1,
+        frequency_penalty: 0,
+        presence_penalty: 0,
+      })
+      .then((result)=>{
+        //답변 가져오기
+        var chat = result.data.choices[0].text;
+        //가져온 답변 채팅창에 띄우기
+        ChatBox.insertAdjacentHTML('beforeend',template.bot(chat));
+      });
+    }
   </script>
 </html>
