타이틀 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      .title{
+        display: flex;
+      }
+      .title_text{
+        font-size: 40px;
+        margin: 0 auto;
+      }
       .content_box {
         width: auto;
         height: 500px;
@@ -34,7 +41,9 @@
     </style>
   </head>
   <body>
+    <div class="title"><span class="title_text">Ai chat</span></div>
     <div class="content_box">
+
       <!-- <p class="line"><span class="chat">안녕</span></p>
       <p class="line"><span class="chat mine">안녕!</span></p> -->
     </div>
