--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       }
       .content_box {
         width: auto;
-        height: 500px;
+        height: 400px;
         overflow-y: scroll;
         padding: 10px;
       }
-      .line {display: flex;}
+      .line {display: flex; font-size: 20px;}
       .chat {
         background-color: rgb(249, 241, 199);
         max-width: 600px; word-wrap: break-word;
@@ -29,9 +29,10 @@
       .InputBox{
         display: flex;
         margin: 10px;
-        height: 30px;
+        height: 40px;
       }
       #input{
+        font-size: 20px;
         width: 90%;
       }
       #send{
