--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       InputBox.value = '';
       //api로 답변듣기
       const configuration = new Configuration({
-        apiKey: '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',
+        apiKey: `${process.env.app}`,
       });
       const openai = new OpenAIApi(configuration);
 
